k8s/notifications-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
      - name: notifications-api
        image: widawek/store-app-notifications-api:1.0.0
        ports:
        - containerPort: 5001
