k8s/notifications-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-api-service
spec:
  selector:
    app: notifications-api
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
