k8s/rabbitmq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  ports:
    - port: 5672
      targetPort: 5672
    # - name: management
    #   protocol: TCP
    #   port: 15672
    #   targetPort: 15672
  selector:
    app: rabbitmq
