k8s/store-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-frontend-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: store-frontend
