k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /   # (.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-frondend-cluster-ip-service
                port:
                  number: 3000
          # - path: / #api/(.*)
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: products-api-cluster-ip-service
          #       port:
          #         number: 3000
